--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     -->
     <title>Lostaria | Serveur Minecraft mini-jeux</title>
 
-    <meta name="theme-color" content="#141429">
+    <meta name="theme-color" content="#9978f6">
 
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/logo192.png">
     <meta property="og:image" content="%PUBLIC_URL%/logo192.png">
@@ -31,9 +31,20 @@
     <meta property="og:site_name" content="Lostaria | Serveur Minecraft mini-jeux">
 
     <meta name="description"
-          content="Lostaria est un serveur Minecraft mini-jeux français né de la communauté d’Epicube. Depuis plus de 6 ans, nous recréons des jeux emblématiques dans une ambiance amicale, pour des soirées fun et détendues entre amis.">
+          content="Lostaria - Serveur Minecraft mini-jeux. D'origine une communauté de guildes du serveur Epicube, Lostaria recrée les jeux qui nous ont rassemblés dans une ambiance amicale et de détente.">
     <meta name="og:description"
-          content="Lostaria est un serveur Minecraft mini-jeux français né de la communauté d’Epicube. Depuis plus de 6 ans, nous recréons des jeux emblématiques dans une ambiance amicale, pour des soirées fun et détendues entre amis.">
+          content="Lostaria - Serveur Minecraft mini-jeux. D'origine une communauté de guildes du serveur Epicube, Lostaria recrée les jeux qui nous ont rassemblés dans une ambiance amicale et de détente.">
+
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Lostaria | Serveur Minecraft mini-jeux">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Lostaria | Serveur Minecraft mini-jeux">
+    <meta name="twitter:description" content="Lostaria - Serveur Minecraft mini-jeux. D'origine une communauté de guildes du serveur Epicube, Lostaria recrée les jeux qui nous ont rassemblés dans une ambiance amicale et de détente.">
+
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Lostaria">
+    <meta name="keywords" content="Lostaria, Minecraft, serveur, événementiel, Epicube, communauté, jeux, gaming, serveur minecraft">
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-DQH14YJE51"></script>
     <script>
